[gd_scene load_steps=6 format=3 uid="uid://dys1h3fpmulto"]

[ext_resource type="Script" path="res://Scripts/UserInterface/pause_menu.gd" id="1_qmvci"]
[ext_resource type="PackedScene" uid="uid://b3ucytmm3fw3i" path="res://Scenes/UserInterface/settings_menu.tscn" id="2_tnagp"]
[ext_resource type="PackedScene" uid="uid://cjk50626hbxwf" path="res://Scenes/UserInterface/transition_player.tscn" id="3_33mtb"]

[sub_resource type="CanvasTexture" id="CanvasTexture_iwmys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8337r"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qmvci")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.588235)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_iwmys")

[node name="SettingsMenu" parent="." instance=ExtResource("2_tnagp")]
visible = false
layout_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -167.0
offset_right = 122.5
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "- PAUSED -"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.5
offset_top = -47.0
offset_right = 191.5
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.988235, 0.905882, 0.533333, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.905882, 0.533333, 1)
theme_override_colors/font_pressed_color = Color(1, 0.94902, 0.721569, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_8337r")
text = "Resume Game"
flat = true

[node name="Control4" type="Control" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.988235, 0.905882, 0.533333, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.905882, 0.533333, 1)
theme_override_colors/font_pressed_color = Color(1, 0.94902, 0.721569, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_8337r")
text = "Configure Settings"
flat = true

[node name="Control6" type="Control" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReturnButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.988235, 0.905882, 0.533333, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0.905882, 0.533333, 1)
theme_override_colors/font_pressed_color = Color(1, 0.94902, 0.721569, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_8337r")
text = "Return To Menu"
flat = true

[node name="TransitionPlayer" parent="ButtonContainer" instance=ExtResource("3_33mtb")]
visible = false
layout_mode = 2

[connection signal="pressed" from="ButtonContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ReturnButton" to="." method="_on_return_button_pressed"]
